--- a/less/main.less
+++ b/less/main.less
@@ -73,6 +73,9 @@ label {
 		flex-direction: row;
 		padding-top: 46px;
 		margin-bottom: -46px;
+		@media screen and (max-width: 768px) {
+			display: block;
+		}
 		#upper-left {
 			flex: 1;
 			display: flex;
@@ -125,6 +128,7 @@ label {
 			height: 100%;
 			margin: auto;
 			padding-top: 30px;
+			position: relative;
 			.stat-point {
 				flex: 1;
 				text-align: center;
@@ -151,7 +155,7 @@ label {
 					}
 				}
 				.stat-point-bar {
-					flex: 6;
+					flex: 5;
 					display: inline-block;
 					position: relative;
 					.stat-point-bar-bar {
@@ -160,7 +164,7 @@ label {
 						position: absolute;
 						left: 50%;
 						bottom: 0;
-						background: rgba(0, 0, 0, 0.05);
+						background: transparent;
 						&:before {
 							content: '';
 							transition: 0.2s;
@@ -200,6 +204,32 @@ label {
     				height: 2px;
     				left: 50%;
     				margin-left: 2px;
+				}
+			}
+			.vert-line-container {
+				display: flex;
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				left: 0;
+				flex-direction: column;
+				.vert-line {
+					flex: 1;
+					border-top: 1px solid rgba(0, 0, 0, 0.05);
+					margin-top: 10px;
+					&:after {
+						content: attr(data-number);
+						position: absolute;
+						font-size: 8px;
+						right: 0;
+						font-weight: bold;
+						color: #66757f;
+						margin-top: -12px;
+						opacity: 0.8;
+					}
+					&:last-child, &:nth-last-child(2) {
+						border-top: 1px solid transparent;
+					}
 				}
 			}
 		}
